# AmmoOS

./: .gitignore  .local-queen-browser.desktop  .secure-protocol  .secure-routing-last-update  CHANGELOG.md  FIELD-BROWSER-2026.md  FIELD-DNS-INTERNET.md  INSTALL-README.md  LICENSE  MANIFEST.sha256  NEXUS-DESIGN-IMPROVEMENT.md  OBS-FieldVoiceFilter  README-AMMOOS.md  README.md  RELEASE-1.0.0-beta.md  RELEASE-1.9.9e.md  RELEASE-10.4.1.md  RELEASE-6.9.0.md  RELEASE-7.1.0.md  RELEASE-7.5.0.md  RELEASE-8.0.0.md  SECURITY.md  STACK-NAV.md  WIKI.md  architecture.html  bench-last-run.json  brilliant_ideas.md  combinatronic.html  field-demo.html  field-ironclad-chips-combinatorics-panel.json  field-ironclad-chips-combinatorics.json  full_av_install.sh  g16-always-optimal-panel.json  g16-field-combinatorics-panel.json  g16-power-sort-panel.json  g16-power-sort-plate.json  genius_shield.sh  getting-started.html  github-bench.html  github-favorites.json  (+14 more)
.pages-hub-AMOURANTHRTX/: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  github_push.sh  linux.sh  seetests.sh  windows.ps1
.pages-hub-AMOURANTHRTX/AmmoOS/: AmmoOS.hpp
.pages-hub-AMOURANTHRTX/AmmoOS/core/: FieldAmouranthCursor.hpp  FieldAmouranthDeactivate.hpp  FieldAmouranthDesktop.hpp  FieldAmouranthDnD.hpp  FieldAmouranthExec.hpp  FieldAmouranthExitConfirm.hpp  FieldAmouranthFileCmd.hpp  FieldAmouranthFileIndex.hpp  FieldAmouranthFilesMenu.hpp  FieldAmouranthFolderView.hpp  FieldAmouranthHudRam.hpp  FieldAmouranthInfo.hpp  FieldAmouranthLaunch.hpp  FieldAmouranthMenu.hpp  FieldAmouranthOs.hpp  FieldAmouranthSearchFlyout.hpp  FieldAmouranthShutdown.hpp  FieldAmouranthTextures.hpp  FieldAmouranthWm.hpp  FieldAosAppIdentity.hpp  FieldAosAppJournal.hpp  FieldAosAppJournalCfg.hpp  FieldAosAppSnapshot.hpp  FieldAosChipsWave.hpp  FieldAosLoading.hpp  FieldAosMonitor.hpp  FieldAosNesTest.hpp  FieldAosStatusBar.hpp  FieldAosTest.hpp
.pages-hub-AMOURANTHRTX/AmmoOS/data/: Data.hpp  FieldAmmoFat.hpp  FieldAmmoVfs.hpp  FieldAmmoZip.hpp  FieldExtensionEditor.hpp  FieldExtensionMap.hpp  FieldJournal.hpp  FieldRegistry.hpp  FieldRegistryEditor.hpp
.pages-hub-AMOURANTHRTX/AmmoOS/windowing/: FieldAmouranthWm.hpp  FieldRtxApp.hpp  FieldRtxWidgets.hpp  FieldTaskbarLayout.hpp  FieldWinApp.hpp  FieldWinFrame.hpp  FieldWmChrome.hpp  FieldWmCompositor.hpp  FieldWmCore.hpp  FieldWmDock.hpp  FieldWmInput.hpp  FieldWmNesMenu.hpp  FieldWmShell.hpp  FieldWmStatusBar.hpp
.pages-hub-AMOURANTHRTX/FieldKilroy/: FieldKilroyLayer.hpp  FieldPlatform.hpp  FieldRtxFieldAbs.hpp
.pages-hub-AMOURANTHRTX/FieldKilroy/kernel_module/rtx_field/: Makefile  rtx_field.c  rtx_field_uapi.h
.pages-hub-AMOURANTHRTX/FieldX86Core/: CMakeLists.txt
.pages-hub-AMOURANTHRTX/FieldX86Core/include/: decode.h  fpu.h  mem.h  ops.h  prim_ops.h  x86emu.h  x86emu_int.h
.pages-hub-AMOURANTHRTX/FieldX86Core/src/: api.c  decode.c  fpu.c  mem.c  ops.c  ops2.c  prim_ops.c
.pages-hub-AMOURANTHRTX/Navigator/: Navigator.hpp  main.cpp
.pages-hub-AMOURANTHRTX/Navigator/engine/: AMOURANTHRTX.hpp  Camera.hpp  ELLIE.hpp  EngineCompat.hpp  FieldAmmoA2600.hpp  FieldAmmoAmiga.hpp  FieldAmmoAsm.hpp  FieldAmmoBios.hpp  FieldAmmoBrowser.hpp  FieldAmmoCc.hpp  FieldAmmoCode.hpp  FieldAmmoDbg.hpp  FieldAmmoDecomp.hpp  FieldAmmoDisasm.hpp  FieldAmmoDreamcast.hpp  FieldAmmoEmuCommon.hpp  FieldAmmoExec.hpp  FieldAmmoGenesis.hpp  FieldAmmoInc.hpp  FieldAmmoLink.hpp  FieldAmmoN64.hpp  FieldAmmoNes.hpp  FieldAmmoObj.hpp  FieldAmmoPs1.hpp  FieldAmmoPs2.hpp  FieldAmmoRun.hpp  FieldAmmoSms.hpp  FieldAmmoSnes.hpp  FieldAmmoSys.hpp  FieldAmmoText.hpp  FieldAmmoTextFonts.hpp  FieldAmmoTextSpell.hpp  FieldAmmoToolchain.hpp  FieldAmmoTools.hpp  FieldAmmoXbox360.hpp  FieldAudioRack.hpp  FieldBios.hpp  FieldBrowserHook.cpp  FieldBrowserHook.hpp  FieldCdRom.hpp  (+68 more)
.pages-hub-AMOURANTHRTX/Navigator/engine/AmmoA2600/: FieldA2600Core.hpp
.pages-hub-AMOURANTHRTX/Navigator/engine/AmmoGenesis/: FieldGenesisCore.hpp
.pages-hub-AMOURANTHRTX/Navigator/shaders/: Makefile
.pages-hub-AMOURANTHRTX/assets/: AMOURANTHRTX.desktop  browsers.json
.pages-hub-AMOURANTHRTX/docs/: index.html
.pages-hub-AMOURANTHRTX/dos/: DOS.hpp  FieldAmmoShell.hpp  FieldDos.hpp  FieldDosChrome.hpp  FieldDosConfig.hpp  FieldDosDisplay.hpp  FieldDosEmbed.cpp  FieldDosEmbed.hpp  FieldDosImmersive.hpp  FieldDosInt.hpp  FieldDosRaid.hpp  FieldDosViewport.hpp  FieldDrives.hpp  FieldInt21.hpp  FieldRtxAmmos.hpp  FieldRtxBasic.hpp  FieldRtxBasicIde.hpp  FieldRtxBasicTextbook.hpp  FieldRtxBoot.hpp  FieldRtxCmdHelp.hpp  FieldRtxConsoleGui.hpp  FieldRtxEdit.hpp  FieldRtxGui.hpp  FieldRtxHelp.hpp  FieldRtxLe.hpp  FieldRtxMemTree.hpp  FieldRtxMemory.hpp  FieldRtxMouse.hpp  FieldRtxPm.hpp  FieldRtxShell.hpp  FieldRtxTerm.hpp  FieldRtxThemePicker.hpp  FieldRtxThemes.hpp  FieldRtxThrottle.hpp  FieldRtxTui.hpp  FieldRtxVfs.hpp  FieldRtxVgaText.hpp
.pages-hub-AMOURANTHRTX/include/: uapi
.pages-hub-AMOURANTHRTX/media/: 3d.mkv  banner.sh
.pages-hub-AMOURANTHRTX/scripts/: ammo_fdisk.py  ammo_format.py  ammo_platform.py  apply_gpu_doom_shaders.py  apply_libx86emu_vendor.sh  backup_ammo_dos.py  bench_chips.py  bench_dos_suite.py  bench_dosbox.conf  bench_mame_compare.py  bench_storage.py  bench_x86_host.cpp  betatester_kilroy.sh  boot_floppy_only_test.cpp  boot_to_doom_test.cpp  build_kilroy_os.sh  build_rtx_kernel.sh  debug_boot_20s.sh  debug_boot_screen.cpp  debug_invalid_opcode.cpp  detect_browsers.py  detect_terminals.py  doom.sh  doom_debug_eip.cpp  doom_int_trace.cpp  doom_mem_probe.cpp  doom_regs_dump.cpp  doom_trace_test.cpp  dos.sh  dos_engine_test.cpp  dump_ip.cpp  dump_kernel.cpp  end_game_audit.py  extract_batch_meta.py  extract_doom_gpu.py  field_brain_memory.py  field_kilroy.sh  field_superintelligence.py  gen_amouranthos_icons.py  gen_dos_ui_icons.py  (+107 more)
.pages-hub-AMOURANTHRTX/scripts/rtx_dos/: bootsect_720k.py  bootsect_hd.py  gen_command_txt.py  mk_ammo_devkit.py  mk_ammo_stubs.py  mk_ammoboot_com.py  mk_drivers.py  mk_supercore.py  patch_msdos63.py
.pages-hub-AMOURANTHRTX/scripts/vendor-libx86emu/: decode.h  ops2.c
(+2923 files in other folders)
